[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face_parsing"
version = "0.1.0"
description = "BiSeNet-based face parsing (hair, skin, etc.) for face-cropping"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "torch>=1.8.0",
  "torchvision>=0.9.0",
  "numpy>=1.19.5",
  "opencv-python>=4.5.3.56"
]

[project.urls]
"Source" = "https://github.com/your-username/face-parsing.PyTorch"
